--- a/pom.xml
+++ b/pom.xml
@@ -20,18 +20,18 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>21</java.version>
+
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
-        <maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
-        <maven-surefire-failsafe-plugin-version>3.2.5</maven-surefire-failsafe-plugin-version>
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+        <maven-surefire-failsafe-plugin.version>3.5.3</maven-surefire-failsafe-plugin.version>
 
         <adrhc-utilities.version>1.0-SNAPSHOT</adrhc-utilities.version>
-        <lucene.version>9.10.0</lucene.version>
-        <commons-text.version>1.12.0</commons-text.version>
+        <commons-text.version>1.13.1</commons-text.version>
         <commons-collections4.version>4.4</commons-collections4.version>
-
+        <lucene.version>10.2.2</lucene.version>
     </properties>
 
     <dependencies>
@@ -118,7 +118,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin-version}</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -129,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-failsafe-plugin-version}</version>
+                <version>${maven-surefire-failsafe-plugin.version}</version>
 <!--                <configuration>-->
 <!--                    <argLine>&#45;&#45;enable-preview</argLine>-->
 <!--                </configuration>-->
@@ -137,7 +137,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven-surefire-failsafe-plugin-version}</version>
+                <version>${maven-surefire-failsafe-plugin.version}</version>
 <!--                <configuration>-->
 <!--                    <argLine>&#45;&#45;enable-preview</argLine>-->
 <!--                </configuration>-->
